Sistema de Login (Login e Registro)

--- a/SisMEC/Views/Shared/_Layout.cshtml
+++ b/SisMEC/Views/Shared/_Layout.cshtml
@@ -23,24 +23,24 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="List">Usuarios</a>
-                        </li>                                                                           
-                        <li class="nav-item">                                                           
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Servico" asp-action="List">Servicos</a>
-                        </li>                                                                           
-                        <li class="nav-item">                                                          
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="List">Produtos</a>
-                        </li>                                                                           
-                        <li class="nav-item">                                                           
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="List">Clientes</a>
-                        </li>                                                                           
-                        <li class="nav-item">                                                           
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Carro" asp-action="List">Carros</a>
-                        </li>                                                                           
-                        <li class="nav-item">                                                           
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Caixa" asp-action="List">Caixa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Servico" asp-action="List">Servicos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="List">Produtos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="List">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Carro" asp-action="List">Carros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Caixa" asp-action="List">Caixa</a>
+                        </li>
+                        <li>
+                            @await Html.PartialAsync("_LoginPartial")
                         </li>
                     </ul>
                 </div>
